# PPNFlow

./: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  run_daily_admin.py  run_engine_admin.bat  start-dev.bat  start-web.bat  tailwind.config.ts  test_daily_run.py  vite.config.ts
.claude/: launch.json
engine/: base_node.py  cache.py  executor.py  graph.py  main.py  protocol.py  registry.py  requirements.txt  test_engine.py  ws_server.py
engine/capture/: build.bat  test_wgc_dll.py  wgc_capture.cpp
engine/nodes/: ai_chat.py  condition.py  delay.py  game_click.py  image_display.py  image_ops.py  json_parse.py  keyboard_press.py  keyboard_type.py  mouse_click.py  mouse_move.py  mouse_scroll.py  ocr.py  pixel_color.py  screenshot.py  text_display.py  wait_feature.py  window_control.py  window_screenshot.py  ww_tasks.py
engine/providers/: anthropic_provider.py  base_provider.py  openai_provider.py
engine/utils/: auto_install.py  win_utils.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine_bridge.rs  lib.rs  main.rs
src-tauri/src/commands/: engine.rs
src/__tests__/: setup.ts
src/hooks/: useEngine.ts  useExecution.ts
src/lib/: events.ts  graphSerializer.ts  mockExecutor.ts  mockManifests.ts  nodeColors.ts  nodeFunctionAnalyzer.ts  nodeFunctionConverter.ts  tauriApi.ts  templates.ts  wsEngine.ts
src/stores/: executionStore.ts  flowStore.ts  manifestStore.ts  nodeFunctionStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: execution.ts  node.ts  (+2 more)
(+48 files in other folders)
